Replace hardcoded make file values
Signed-off-by: Roberto Rosario <roberto.rosario@mayan-edms.com>

--- a/config.env
+++ b/config.env
@@ -1,9 +1,11 @@
 DEFAULT_DATABASE_NAME=mayan
 DEFAULT_DATABASE_PASSWORD=mayanuserpass
 DEFAULT_DATABASE_USER=mayan
+DOCKER_LINUX_IMAGE_VERSION=ubuntu:18.04
 DOCKER_MYSQL_IMAGE_VERSION=mysql:5.7
 DOCKER_ORACLE_IMAGE_VERSION=wnameless/oracle-xe-11g
 DOCKER_POSTGRES_IMAGE_VERSION=postgres:9.6-alpine
+DOCKER_PYTHON_IMAGE_VERSION=python:3-slim
 DOCKER_RABBITMQ_IMAGE_VERSION=rabbitmq:3-alpine
 DOCKER_REDIS_IMAGE_VERSION=redis:5.0-alpine
 PYTHON_AMQP_VERSION=2.5.2
