Add targets to use a test Docker registry
Signed-off-by: Roberto Rosario <roberto.rosario@mayan-edms.com>

--- a/config.env
+++ b/config.env
@@ -7,6 +7,9 @@ DEFAULT_RABBITMQ_PASSWORD=mayanrabbitmqpassword
 DEFAULT_RABBITMQ_USER=mayan
 DEFAULT_RABBITMQ_VHOST=mayan
 DEFAULT_REDIS_PASSWORD=mayanredispassword
+DOCKER_HOST_REGISTRY_NAME=docker-registry.local
+DOCKER_HOST_REGISTRY_PORT=5000
+DOCKER_IMAGE_MAYAN_NAME=mayanedms/mayanedms
 DOCKER_LINUX_IMAGE_VERSION=ubuntu:19.10
 DOCKER_MYSQL_IMAGE_VERSION=mysql:5.7
 DOCKER_ORACLE_IMAGE_VERSION=wnameless/oracle-xe-11g
