Add entry to automate Docker Compose version
Entry name is BINARY_DOCKER_COMPOSE_VERSION.

Signed-off-by: Roberto Rosario <roberto.rosario@mayan-edms.com>

--- a/config.env
+++ b/config.env
@@ -1,3 +1,4 @@
+BINARY_DOCKER_COMPOSE_VERSION=1.25.5
 DEFAULT_DATABASE_NAME=mayan
 DEFAULT_DATABASE_PASSWORD=mayanuserpass
 DEFAULT_DATABASE_USER=mayan
