Remove the django-test-without-migrations package
Signed-off-by: Roberto Rosario <roberto.rosario@mayan-edms.com>

--- a/tox.ini
+++ b/tox.ini
@@ -13,7 +13,7 @@ basepython =
     py36: python3.6
 
 commands=
-    coverage run {envdir}/bin/django-admin.py test --mayan-apps --settings=mayan.settings.testing --nomigrations
+    coverage run {envdir}/bin/django-admin.py test --mayan-apps --settings=mayan.settings.testing --skip-migrations
 
 deps =
     -rrequirements/testing-no-django.txt
@@ -21,7 +21,7 @@ deps =
     django1.9: django>=1.9,<1.10
     django1.10: django>=1.10,<1.11
     django1.11: django>=1.11,<1.12
-    django2.0: django>=2.0,<2.1 
+    django2.0: django>=2.0,<2.1
 
 setenv=
     COVERAGE_FILE=.coverage.tox.{envname}
