--- a/.tx/config
+++ b/.tx/config
@@ -140,6 +140,12 @@ source_file = mayan/apps/lock_manager/locale/en/LC_MESSAGES/django.po
 source_lang = en
 type = PO
 
+[mayan-edms.logging-3-0]
+file_filter = mayan/apps/logging/locale/<lang>/LC_MESSAGES/django.po
+source_file = mayan/apps/logging/locale/en/LC_MESSAGES/django.po
+source_lang = en
+type = PO
+
 [mayan-edms.mailer-2-0]
 file_filter = mayan/apps/mailer/locale/<lang>/LC_MESSAGES/django.po
 source_file = mayan/apps/mailer/locale/en/LC_MESSAGES/django.po
