Disable upgrade tests
Disabled due to current upstream Celery->vine dependency
breakage.

Signed-off-by: Roberto Rosario <roberto.rosario@mayan-edms.com>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -148,7 +148,7 @@ job_push_python:
 
 # Test upgrade from the latest public version to the local version
 .test_upgrade_base: &test_upgrade_base
-  stage: test
+  stage: test_upgrade
   image: ubuntu:19.10
   cache:
     paths:
