Add new compose file.

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -19,6 +19,7 @@ services:
       MAYAN_CELERY_RESULT_BACKEND: redis://:${MAYAN_REDIS_PASSWORD:-mayanredispassword}@redis:6379/1
       MAYAN_DATABASES: "{'default':{'ENGINE':'django.db.backends.postgresql','NAME':'${MAYAN_DATABASE_DB:-mayan}','PASSWORD':'${MAYAN_DATABASE_PASSWORD:-mayandbpass}','USER':'${MAYAN_DATABASE_USER:-mayan}','HOST':'postgresql'}}"
       MAYAN_DOCKER_WAIT: "postgresql:5432 redis:6379"
+      PYTHONDONTWRITEBYTECODE: 1
       # Replace with the line below when using RabbitMQ
       # MAYAN_DOCKER_WAIT: "postgresql:5432 redis:6379 rabbitmq:5672"
       # To add operating system packages, like additional OCR language,
@@ -26,14 +27,16 @@ services:
       # MAYAN_APT_INSTALLS: "tesseract-ocr-deu tesseract-ocr-nld"
       # To add Python libraries, like LDAP, put then in the variable below.
       # MAYAN_PIP_INSTALLS: "python-ldap"
-    image: mayanedms/mayanedms:3
+    image: mayanedms/mayanedms:3.4.17
     networks:
       - bridge
     ports:
       - "80:8000"
     restart: unless-stopped
     volumes:
-      - ${MAYAN_APP_VOLUME:-app}:/var/lib/mayan
+      - ${ABSOLUTE_PATH_TO_WHERE_YOU_CLONED_MAYAN}/docker-volumes/mayan-edms/media:/var/lib/mayan
+      - ${ABSOLUTE_PATH_TO_WHERE_YOU_CLONED_MAYAN}/mayan/apps/appearance/static/appearance:/opt/mayan-edms/static/appearance
+      - ${ABSOLUTE_PATH_TO_WHERE_YOU_CLONED_MAYAN}/mayan:/opt/mayan-edms/lib/python3.7/site-packages/mayan
       # Optional volumes to access external data like staging or watch folders
       # - /opt/staging_files:/staging_files
       # - /opt/watch_folder:/watch_folder
@@ -48,7 +51,7 @@ services:
       - bridge
     restart: unless-stopped
     volumes:
-      - ${MAYAN_POSTGRES_VOLUME:-postgres}:/var/lib/postgresql/data
+      - ${ABSOLUTE_PATH_TO_WHERE_YOU_CLONED_MAYAN}/docker-volumes/mayan-edms/postgres:/var/lib/postgresql/data
 
   redis:
     command:
@@ -74,7 +77,7 @@ services:
       - bridge
     restart: unless-stopped
     volumes:
-      - ${MAYAN_REDIS_VOLUME:-redis}:/data
+      - ${ABSOLUTE_PATH_TO_WHERE_YOU_CLONED_MAYAN}/docker-volumes/mayan-edms/redis:/data
 
   # Optional services
 
