--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -34,9 +34,9 @@ services:
       - "80:8000"
     restart: unless-stopped
     volumes:
-      - ${ABSOLUTE_PATH_TO_WHERE_YOU_CLONED_MAYAN}/docker-volumes/mayan-edms/media:/var/lib/mayan
-      - ${ABSOLUTE_PATH_TO_WHERE_YOU_CLONED_MAYAN}/mayan/apps/appearance/static/appearance:/opt/mayan-edms/static/appearance
-      - ${ABSOLUTE_PATH_TO_WHERE_YOU_CLONED_MAYAN}/mayan:/opt/mayan-edms/lib/python3.7/site-packages/mayan
+      - ${MAYAN}/docker-volumes/mayan-edms/media:/var/lib/mayan
+      - ${MAYAN}/mayan/apps/appearance/static/appearance/css:/opt/mayan-edms/static/appearance/css
+      - ${MAYAN}/mayan:/opt/mayan-edms/lib/python3.7/site-packages/mayan
       # Optional volumes to access external data like staging or watch folders
       # - /opt/staging_files:/staging_files
       # - /opt/watch_folder:/watch_folder
@@ -51,7 +51,7 @@ services:
       - bridge
     restart: unless-stopped
     volumes:
-      - ${ABSOLUTE_PATH_TO_WHERE_YOU_CLONED_MAYAN}/docker-volumes/mayan-edms/postgres:/var/lib/postgresql/data
+      - ${MAYAN}/docker-volumes/mayan-edms/postgres:/var/lib/postgresql/data
 
   redis:
     command:
@@ -77,7 +77,7 @@ services:
       - bridge
     restart: unless-stopped
     volumes:
-      - ${ABSOLUTE_PATH_TO_WHERE_YOU_CLONED_MAYAN}/docker-volumes/mayan-edms/redis:/data
+      - ${MAYAN}/docker-volumes/mayan-edms/redis:/data
 
   # Optional services
 
