--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -26,8 +26,7 @@ services:
       # MAYAN_APT_INSTALLS: "tesseract-ocr-deu tesseract-ocr-nld"
       # To add Python libraries, like LDAP, put then in the variable below.
       # MAYAN_PIP_INSTALLS: "python-ldap"
-      #image: mayanedms/mayanedms:3
-    image: f645c5842a26
+    image: mayanedms/mayanedms:3
     networks:
       - bridge
     ports:
