Tag GitLab Docker build stage
Use tags to ensure the correct runner acquires the test.

Signed-off-by: Roberto Rosario <roberto.rosario@mayan-edms.com>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,6 +29,9 @@ job_docker_build:
   only:
     - releases/all
     - releases/docker
+  tags:
+    - postgres
+    - redis
   variables:
     POSTGRES_DB: "mayan_edms"
     POSTGRES_PASSWORD: "postgres"
