--- a/docker/stack.yml
+++ b/docker/stack.yml
@@ -22,7 +22,7 @@ services:
       MAYAN_CELERY_BROKER_URL: redis://redis:6379/1
       MAYAN_CELERY_RESULT_BACKEND: redis://redis:6379/0
       MAYAN_DATABASES: "{'default':{'ENGINE':'django.db.backends.postgresql','NAME':'mayan','PASSWORD':'mayandbpass','USER':'mayan','HOST':'db'}}"
-    image: mayanedms/mayanedms:latest
+    image: mayanedms/mayanedms:s4.0
     ports:
       - 80:8000
     volumes:
