Add `libarchive-zip-perl` to the Docker image
Allows EXIFTOOL to retrieve Zip file metadata. Closes GitLab
issue #918. Thanks to Enrico Gargale (@egargale) for the request.

Signed-off-by: Roberto Rosario <roberto.rosario@mayan-edms.com>

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -42,6 +42,7 @@ apt-get update \
     gpgv \
     gnupg1 \
     graphviz \
+    libarchive-zip-perl \
     libfuse2 \
     libmagic1 \
     libmariadb3 \
